--- a/razorqt-panel/CMakeLists.txt
+++ b/razorqt-panel/CMakeLists.txt
@@ -23,11 +23,12 @@ setByDefault(CLOCK_PLUGIN       Yes )
 setByDefault(DESKTOPSWITCH_PLUGIN  Yes )
 setByDefault(QUICKLAUNCH_PLUGIN Yes )
 setByDefault(TRAY_PLUGIN        Yes )
-setByDefault(MAINMENU_PLUGIN    Yes )
+setByDefault(MAINMENU_PLUGIN    No )
 setByDefault(TASKBAR_PLUGIN     Yes )
 setByDefault(SCREENSAVER_PLUGIN  Yes )
 setByDefault(SHOWDESKTOP_PLUGIN Yes)
 setByDefault(MOUNT_PLUGIN Yes)
+setByDefault(GEUZEN_MENU_PLUGIN Yes)
 
 # *******************************************************************
 
@@ -81,6 +82,12 @@ endif (TRAY_PLUGIN)
 if (MAINMENU_PLUGIN)
   set(ENABLED_PLUGINS ${ENABLED_PLUGINS}  "Main menu")
   add_subdirectory( plugin-mainmenu )
+endif (MAINMENU_PLUGIN)
+
+
+if (GEUZEN_MENU_PLUGIN)
+  set(ENABLED_PLUGINS ${ENABLED_PLUGINS}  "Geuzen Main menu")
+  add_subdirectory ( geuzen-panel-menu )
 endif (MAINMENU_PLUGIN)
 
 if (MOUNT_PLUGIN)
