--- a/razorqt-panel/geuzen-panel-menu/CMakeLists.txt
+++ b/razorqt-panel/geuzen-panel-menu/CMakeLists.txt
@@ -4,25 +4,32 @@ set(PLUGIN "mainmenu")
 
 
 set(HEADERS
+    menu-view.h
+    menu-model.h
     geuzen-main-menu.h
-    menustyle.h
     geuzen-menu-config.h
 )
 
 set(SOURCES
+    menu-view.cpp
+    menu-model.cpp
     geuzen-main-menu.cpp
-    menustyle.cpp
     geuzen-menu-config.cpp
 )
 
 set(MOCS
+    menu-view.h
+    menu-model.h
     geuzen-main-menu.h
-    menustyle.h
     geuzen-menu-config.h
 )
 
 set(UIS
     geuzen-menu-config.ui
+)
+
+set(RESOURCES
+    geuzen-menu.qrc
 )
 
 set(LIBRARIES
@@ -31,6 +38,7 @@ set(LIBRARIES
 
 set(QT_USE_QTXML 1)
 set(QT_USE_QTDBUS 1)
+set(QT_USE_DECLARATIVE 1)
 
 #*******************************************
 include ("../BuildPlugin.cmake")
